# ultimate-chess-2024

./: .gitignore  Cargo.toml  README.md  build.rs  build_web.ps1  icon.rc
assets/: openings.openings.tsv  player_profiles.computer.json
server/uc2024/: go.mod  go.sum  lib.go
server/uc2024/cmd/: main.go
src/: asset_paths.rs  computer_player.rs  credits.rs  evaluation.rs  how_to_play.rs  lib.rs  local_input.rs  main.rs  menu.rs  multiplayer.rs  openings.rs  render.rs  sounds.rs  transposition_table.rs  uchess.rs  wasm_thread.rs
tools/pgn-parser/: generate.json  go.mod  go.sum  main.go
